# wsaas

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  docker-compose.yml  foundry.toml  yatr.toml
contracts/script/: Deploy.s.sol
contracts/src/: WebSocketDataService.sol
contracts/src/interfaces/: IWebSocketDataService.sol
contracts/test/: CampDataService.t.sol
crates/ws-gateway/: Cargo.toml
crates/ws-gateway/migrations/: 0001_tap.sql
crates/ws-gateway/src/: aggregator.rs  collector.rs  config.rs  db.rs  main.rs  pricing.rs  tap.rs  ws.rs
indexer-agent/: package.json  tsconfig.json
indexer-agent/src/: index.ts
subgraph/: schema.graphql  subgraph.yaml
subgraph/src/: mapping.ts
